2012-05-16  glen e. p. ropella  <gepr@tempusdictum.com>

	* glossary.html: New glossary identical to that in bsgwww (aka
	biosystems.ucsf.edu).

2012-05-10  glen e. p. ropella  <gepr@tempusdictum.com>

	* projects.html: Added blurbs on EI3, EC2, PtII-Bio, and APAP
	Hepatoxicity.

	* Spelling fixes throughout.

2010-06-16  glen e. p. ropella  <gepr@tempusdictum.com>

	* documents.html (frameborder): Add Shahab's JTB paper.
